# ptcore

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml  macos.yml
cmake/: ptcoreConfig.cmake.in
include/: CMakeLists.txt
include/ptcore/: parser.h  ratio.h  text_literals.h
tests/: CMakeLists.txt  compare.h  parser_tests.cpp  ratio_tests.cpp  text_literals_tests.cpp
tests/fixtures/: parse_results_fixture.h
